# PropertyEscrow

./: .env.example  .env.production  .gitignore  .railwayignore  .replit  ALCHEMY_MIGRATION.md  ALCHEMY_MIGRATION_COMPLETE.md  BUSINESS_FLOW_MIGRATION_ANALYSIS.md  COMPILATION_WARNINGS_FIXED_REPORT.md  DEPLOYMENT_GUIDE.md  Dockerfile  ESLINT_CLEANUP_COMPLETION_REPORT.md  FINAL_DELIVERY_SUMMARY.md  LOGGING.md  MIGRATION_COMPLETE_SUMMARY.md  MIGRATION_STATUS_REPORT.md  PHASE_3_ACCESSIBILITY_COMPLETION_STATUS.md  PHASE_3_FINAL_COMPLETION_REPORT.md  PHASE_3_UI_CONSISTENCY_COMPLETION_REPORT.md  PHASE_4_FINAL_COMPLETION_REPORT.md  PHASE_4_SMART_CONTRACT_SECURITY_COMPLETION.md  PHASE_5_COMPLETION_REPORT.md  PHASE_6_FINAL_COMPLETION_REPORT.md  PHASE_7_FINAL_HANDOFF.md  QUICK_START_GUIDE.md  README.md  ROUTING_CONSOLIDATION_REPORT.md  STAKEHOLDER_HANDOFF_PACKAGE.md  STYLE_SYSTEM_ENFORCEMENT_REPORT.md  UI_CODEBASE_ANALYSIS.md  UI_CONSOLIDATION_DECISION.md  accessibility-audit-report.json  accessibility-audit.js  accessibility-validation-report.json  accessibility-validation.js  check_admin_user.py  check_database_schema.py  check_database_validation.py  cli-demo.js  create_admin_user.py  (+45 more)
attached_assets/: Pasted--Dev-Agent-Action-Migrate-Blockchain-Ops-to-Alchemy-Cleanup-Integration-1-Remove-Old-Blockc-1749307272311_1749307272312.txt  (+5 more)
backend/: .env.railway  Dockerfile  pyproject.toml  railway.json  requirements.txt
backend/app/: PropertyEscrow.json  alchemy_deployer.py  auth.py  blockchain.py  database.py  main.py  models.py  schemas.py
cache/: solidity-files-cache.json  (+1 more)
(+192 files in other folders)
